# AdapterForge

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GETTING_STARTED.md  PRIVACY.md  README.de.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  scorecard.yml
docs/: pipeline.example.json
src/adapterforge/: __init__.py  cli.py  dataset.py  deploy.py  export.py  merge.py  pipeline.py  shell.py  train.py
tests/: test_dataset.py
