[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "adapterforge"
version = "0.1.0"
description = "Local QLoRA adapter training pipeline for Ollama models on Apple Silicon"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Rafael Yilmaz" }]
dependencies = [
    "mlx-lm>=0.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[project.scripts]
adapterforge = "adapterforge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
